--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "I don't actually know at this time." # This will show up in places
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
+email: "ian@iancullinane.com"
 github_username: "iancullinane"
 #facebook_username: username
 #flickr_username: username
