--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "chop wood, carry water"
 author: "Ian Cullinane"
-description: "I don't actually know at this time." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Personal blog of Ian Cullinane." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
