--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@ github_username: "iancullinane"
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
-# remote_theme: "sparanoid/almace-scaffolding"
-remote_theme: daattali/beautiful-jekyll@5.0.0
+theme: "minima"
 
 rss: rss
 
@@ -28,7 +27,6 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-remote-theme
 
 titles_from_headings:
   strip_title: true
